source/sass/components/_form.scss
// Form Reset

input[type="text"],
input[type="email"],
input[type="password"] {
    border: 0;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

input[type="text"],
input[type="email"],
input[type="password"],
textarea {
    text-align: left;
    border: 0;
    background-color: $gray-10;
    width: 100%;
    padding: 10px 15px;
    margin-bottom: 15px;
    @extend .u-transition;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus,
textarea:focus {
    background-color: $gray-20;
    @extend .u-transition;
}

textarea { resize: vertical; }

input[type="checkbox"],
input[type="radio"] {
    display: none;
}

input:disabled + label {
    opacity: .4;
}

button, 
input[type='button'],
input[type='reset'],
input[type="submit"] {
    @extend .button;
    border: 0;
}

input[type="file"] { @extend .button; }

button {
    border-radius: 0;
    padding: 17px 20px;
}

fieldset {
    border: 0;
    padding: 0;
    margin: 5px 0;
}

legend {

}


form,
.form {
    padding: 10px 0;

    ::-webkit-input-placeholder {
        color: $black;
        text-align: left;
    }
    :-moz-placeholder {
        color: $black;
        text-align: left;
    } /* Firefox 18- */
    ::-moz-placeholder {
        color: $black;
        text-align: left;
    } /* Firefox 19+ */
    :-ms-input-placeholder {
        color: $black;
        text-align: left;
    }

    &--negative {
        input { color: $white; }

        input[type='text'], input[type='email'], input[type='submit'], textarea {
            background-color: $white-10;
            @include placeholder {
                color: $white;
            }
            &:focus {
                background-color: $white-20;
                @extend .u-transition;
            }
        }

        input[type="submit"]:hover {
            background-color: $white-20;
        }
    }
}

.checkbox,
.radio {
    padding:7px 10px;
    margin-bottom: 10px;

    input[type="checkbox"] + label:before,
    input[type="radio"] + label:before {
        vertical-align: -6px;
        margin-right: 15px;
    }

    input[type="checkbox"] + label:before {
        @extend .u-material-icons;
        content: 'check_box_outline_blank';
    }

    input[type="checkbox"]:checked + label:before {
        @extend .u-material-icons;
        content: 'check_box';
    }

    input[type="radio"] + label:before {
        @extend .u-material-icons;
        content: 'radio_button_unchecked';
    }

    input[type="radio"]:checked + label:before {
        @extend .u-material-icons;
        content: 'radio_button_checked';
    }
}

.select {
    background-color: $gray-10;
    text-align: left;
    padding: 0 15px;
    margin-bottom: 15px;
    position: relative;
    @extend .u-transition;

    &::before {
        @extend .u-material-icons;
        content: 'keyboard_arrow_down';
        position: absolute;
        right: 0;
        padding-top: 10px;
        margin: 0 auto 0 auto;
        width: 42px;
        height: 32px;
        color: $black;
        z-index: -1
    }

    select {
        height: 42px;
        border: 0;
        border-radius: 0;
        margin: 0;
        background-color: transparent;
        width: 100%;
        -webkit-appearance: none;
        background-image: none;
        &:focus {
        }
    }

    &:hover {
        background-color: $gray-20;
        @extend .u-transition;
    }
}

